# sprout_xplanter

3D Files/: Auger_Drill v11.f3d  chute v8.f3d
YOLOLearning/: jesusthatyou.py  model_test.py  model_train.py
YOLOLearning/TomatoDatasetV2/: README.dataset.txt  README.roboflow.txt  data.yaml
YOLOLearning/TomatoDatasetV2/test/labels/: image_1016_png.rf.913bef566bce31b42cf4ad9ccc9c0b5c.txt  image_1017_png.rf.96db78ff693bafb273bc549ce88bc1b6.txt  image_1021_png.rf.9b7fb539cb1ca49491345401b2c49767.txt  image_105_png.rf.0472e05b3d15adc2acdd3ffc0db481aa.txt  (+68 more)
YOLOLearning/TomatoDatasetV2/train/: labels.cache
YOLOLearning/TomatoDatasetV2/valid/: labels.cache
YOLOLearning/TomatoSeedlingDataset/: README.dataset.txt  README.roboflow.txt  data.yaml
YOLOLearning/TomatoSeedlingDataset/train/: labels.cache
YOLOLearning/TomatoSeedlingDataset/valid/: labels.cache
transplanter_ws/: planter_config.cfg
transplanter_ws/src/gps_navigation_interface/: CMakeLists.txt  package.xml
transplanter_ws/src/gps_navigation_module/: package.xml  setup.cfg  setup.py
transplanter_ws/src/gps_navigation_module/gps_navigation_module/: .waypoint_action_client.py.swp  .waypoint_action_server.py.swp  waypoint_action_client.py  waypoint_action_server.py  waypoint_controller.py
transplanter_ws/src/planter_action_interface/: CMakeLists.txt  package.xml
transplanter_ws/src/planter_module/: package.xml  setup.cfg  setup.py
transplanter_ws/src/transplanter_controller/: package.xml  setup.cfg  setup.py
ultralytics-main/ultralytics/utils/: loss.py  metrics.py
(+1386 files in other folders)
