<?xml version="1.0"?>
<package format="3">
  <name>gps_navigation_module</name>
  <version>0.0.0</version>
  <description>Files for gps waypoint</description>
  <maintainer email="rsl@scu.edu">RSL</maintainer>
  <license>Apache-2.0</license>
  
  <depend>gps_navigation_interface</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <exec_depend>rclpy</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

